# LLM-Automated-Inventory-Management

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVOPS_SUMMARY.md  Dockerfile  GITHUB_SETTINGS.md  LICENSE  README.md  function_app.py  onboarding_tools.py  package-lock.json  package.json  projectOverview.md  pyproject.toml  receiving_router_function.py  requirements.txt
.cursor/agents/: linter-fixer.md
.cursor/rules/: a2a-mcp-azure-foundry-docs.mdc  architecture-and-scope.mdc  post-change-linter-fix.mdc  python-clean-code.mdc
.cursor/skills/run-linting/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml
.local/chats/: chat_03_19_2PM.txt
InventoryMcpProxy/: __init__.py  function.json
admin-login/: .gitignore  README.md  package-lock.json  package.json  server.js
admin-login/public/: dashboard.html  style.css
admin-portal/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  redeploy.sh  server.js
admin-portal/docs/: deploy-acr-appservice.md
admin-portal/public/: dashboard.html  index.html  style.css
admin-portal/utils/: foundryClient.js  logger.js
docs/: README.md  admin-portal-debugging.md  deploy_azure_functions_demo.md  foundry_admin_orchestrator_agent_instructions.md  marwans_tool_contracts_v1.md  mock_auth_mcp_demo.md  run_admin_orchestrator.md  run_inventory_mcp.md  tool_contract_inventory_admin.md
docs/admin/: README.md  foundry_prompt_agent_instructions.md  local_e2e_admin_orchestrator_inventory_mcp.md  phase3_admin_orchestrator_foundry_plan.md  run_admin_orchestrator.md
docs/contracts/: inventory_mcp_tools_v1.md  marwans_tool_contracts_v1.md  tool_contracts_v1.md
docs/deploy/: README.md  deploy_app_service_container.md  deploy_azure_functions_demo.md  test_deployed_inventory_mcp.md
docs/integration/: admin_orchestrator_inventory.md
docs/inventory/: README.md  real_sql_test.md  run_inventory_mcp.md
docs/progress/marwan/: chat_2026-03-06.md  phase1_inventory_tool.md  phase2_inventory_mcp.md
email-mcp/: app.py
email-mcp/.azure/: config
legacy/: rest_tool_api_app.py
mcp-onboarding/: app.py  host.json  requirements.txt
mcp-onboarding/mcp/: function.json
receiving-function/: .env.template  function_app.py  requirements.txt
scripts/: deploy_inventory_mcp_appservice.sh  mcp_demo_client.py  mock_auth_identity_demo.py  mock_mcp_foundry_identity_demo.py
scripts/sql/: clear_all_except_customer_email.sql  delete_customer_by_email_per_table.sql  delete_customer_full_cascade_by_email.sql  delete_email_logs_by_customer_email.sql  upsert_business_account_for_email.sql
src/: README.md  deleteMeLater.py
src/a2a_foundry_math_agent/: .env.template  README.md  __main__.py  agent_definition.py  app_factory.py  azure-ai-project-documentation.md  foundry_agent.py  foundry_agent_executor.py  pyproject.toml  quote_agent.toml  settings.py  test_client.py
src/a2a_foundry_math_agent/agents/: agent.template.toml  math_agent.toml
src/a2a_servers/: .env.template  README.md  __init__.py  __main__.py  __main_async__.py  agent_definition.py  agent_store.py  app_factory.py  composite_agent_executor.py  composite_definition.py  config_loader.py  foundry_agent.py  foundry_agent_executor.py  foundry_agent_tools.py  foundry_tool_schema.py  group_definition.py  group_router_executor.py  pyproject.toml  settings.py  skill_router.py  test_client.py
src/a2a_servers/agents/: agent.template.toml  composite.template.toml  email_agent.toml  email_quote_purchase_order_composite.toml  group.template.toml  math_agent.sample.toml  purchase_order_agent.toml  quote_agent.toml  quote_purchase_order_composite.toml
src/a2a_servers/dashboard/: __init__.py  api.py  toml_writer.py  ui.py
src/a2a_servers/docs/: adding-agents.md  agent-config-hosting.md  agent-definition-reference.md  architecture.md  azure-blob-configuration.md  dashboard.md  database-backend.md  deployment-azure.md  developer-setup.md  foundry-integration.md  grouped-endpoint-input-contract.md  local-testing-with-devtunnels.md  quickstart-blob-storage.md  redeploying.md  runbook.md  troubleshooting.md
src/a2a_servers/tests/: test_admin_orchestrator.py  test_agent_definition.py  test_agent_store.py  test_app_factory.py  test_composite_definition.py  test_config_loader.py  test_foundry_agent_tools.py  test_foundry_tool_schema.py  test_group_definition.py  test_group_router_executor.py  test_inventory_service.py  test_mock_mcp_auth_demo.py  test_sample.py  test_service_v2.py  test_skill_routing.py
src/admin_orchestrator_agent/: README.md  __init__.py  app.py  classifier.py  inventory_mcp_client.py  quote_agent_client.py  service.py
src/admin_orchestrator_agent/docs/: README.md  foundry_prompt_agent_instructions.md  local_e2e_admin_orchestrator_inventory_mcp.md
src/database_tools/: Dockerfile  README.md  database.py  main.py
src/database_tools/routes/: business_routes.py  purchase_routes.py  quote_routes.py
src/database_tools/services/: business_service.py  purchase_service.py  quote_service.py
src/database_tools/tools/: business_tools.py  purchase_tools.py  (+2 more)
src/inventory_agent/: repository.py  service.py
src/inventory_mcp/: README.md  __init__.py  app.py  server.py
src/inventory_service/: README.md  __init__.py  admin_models.py  admin_repository.py  admin_service.py  factory.py  models.py  repository.py  service.py  sql_admin_repository.py  sql_repository.py
src/marwan/: README.md
src/mcp/: database.py  main.py
src/mcp_auth_demo/: __init__.py
src/mock_auth_mcp/: __init__.py  app.py  server.py
src/mock_mcp_auth_demo/: README.md  app.py  server.py
src/tool_api/: app.py
tests/: conftest.py  test_admin_orchestrator.py  test_admin_orchestrator_api.py  test_agent_definition.py  test_factory.py  test_factory_sql_require.py  test_inventory_admin_service.py  test_inventory_agent.py  test_inventory_service.py  test_sample.py  test_service_v2.py
(+27 files in other folders)
