[project]
name = "llm-automated-inventory-management"
version = "0.1.0"
description = "Simple terminal chatbot using Azure AI Foundry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.8",
    "pyodbc>=5.3.0",
]

[dependency-groups]
dev = [
  "ruff==0.15.0",
  "deptry>=0.24.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "mypy>=1.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Tool Configurations ---

[tool.ruff]
line-length = 88
target-version = "py311"


[tool.ruff.lint]
# E/F = standard python errors
# I = import sorting
# S = security (Bandit) - finds hardcoded passwords/vulnerabilities
# B = bugbear (finds common bugs)
select = ["E", "F", "I", "S", "B"]
ignore = ["S101", "E501"]  # Ignore "Use of assert detected" (standard for tests) and line length

[tool.deptry]
root = "src"
known_first_party = ["inventory_service", "admin_orchestrator_agent", "tool_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
  "--strict-markers",
  "--strict-config",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
