[project]
name = "llm-automated-inventory-management"
version = "0.1.0"
description = "Simple terminal chatbot using Azure AI Foundry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.128.8",
    "mcp[cli]>=1.22.0",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.41.0",
    "mcp>=1.26.0",
    "pyodbc>=5.3.0",
    "starlette>=1.0.0",
    "a2a-sdk>=0.3.0",
    "azure-ai-projects>=2.0.0b4",
    "azure-identity>=1.23.0",
    "click>=8.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.2",
    "flask>=2.0.0",
    "requests>=2.33.0",
    "python-dotenv>=0.19.0",
]

[dependency-groups]
dev = [
  "ruff==0.15.0",
  "deptry>=0.24.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "mypy>=1.19.1",
  "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
# This repo uses a `src/` layout. Hatchling expects package *paths*, not the
# literal directory name.
packages = [
  "src/admin_orchestrator_agent",
  "src/inventory_mcp",
  "src/inventory_service",
]

# --- Tool Configurations ---

[tool.ruff]
line-length = 88
target-version = "py311"


[tool.ruff.lint]
# E/F = standard python errors
# I = import sorting
# S = security (Bandit) - finds hardcoded passwords/vulnerabilities
# B = bugbear (finds common bugs)
select = ["E", "F", "I", "S", "B"]
ignore = ["S101", "E501"]  # Ignore "Use of assert detected" (standard for tests) and line length

[tool.ruff.lint.isort]
# Tell Ruff/isort which modules are part of this repo (src/ layout).
known-first-party = ["admin_orchestrator_agent", "inventory_mcp", "inventory_service"]

# TODO: change to a package importing version to avoid this adhoc dependency management
[tool.deptry]
root = "src"
known_first_party = ["database_tools", "inventory_service", "admin_orchestrator_agent", "tool_api"]

[tool.deptry.per_rule_ignores]
DEP002 = ["uvicorn"]
extend_exclude = [".*/tests/"]
known_first_party = [
  "inventory_service",
  "admin_orchestrator_agent",
  "inventory_mcp",
  "tool_api",
  "a2a_servers",
  "agent_definition",
  "app_factory",
  "composite_agent_executor",
  "composite_definition",
  "foundry_agent",
  "foundry_agent_executor",
  "foundry_tool_schema",
  "settings",
]

[tool.pytest.ini_options]
testpaths = ["src/a2a_servers/tests"]
pythonpath = ["src", "src/a2a_servers"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
  "--strict-markers",
  "--strict-config",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
